--- a/rover/partials/reports/forecastGuestGroupReport/rvForecastGuestGroupReport.html
+++ b/rover/partials/reports/forecastGuestGroupReport/rvForecastGuestGroupReport.html
@@ -48,5 +48,5 @@
     </div>
 </div>
 
-<rv-pagination  page-options="paginationConfig" page-data="totalCount">
+<rv-pagination  page-options="paginationConfig" page-data="totalCount" ng-if="showReportDetails">
 </rv-pagination>
