--- a/rover/partials/reports/businessOnBooks/rvBusinessOnBooksReport.html
+++ b/rover/partials/reports/businessOnBooks/rvBusinessOnBooksReport.html
@@ -108,5 +108,5 @@
         </div>
     </div>
 </div>
-<rv-pagination  page-options="businessOnBooksPagination" page-data="totalCount" >
+<rv-pagination  page-options="paginationConfig" page-data="totalCount" ng-if="showReportDetails">
 </rv-pagination>
