CICO-33346 reverting the exclude from rate change

--- a/admin/partials/rates/adNewAddon.html
+++ b/admin/partials/rates/adNewAddon.html
@@ -213,7 +213,7 @@
                             </div>
                         </div>
                     </div>
-                    <div ng-show="false" class="entry has-sortable no-margin-right">
+                    <div class="entry has-sortable no-margin-right">
                         <label class="center_align">
                             <span class="assigned_room_text">Excluded from Rates</span></label>
                         <ul class="boxes sortable ui-sortable short-list" data-type="target" data-drop="true" ng-model="singleAddon.excludedRates" jqyoui-droppable="{multiple:true}" data-jqyoui-options="{accept:'.non-assigned-room-types'}">
