--- a/zest_station/css/themes/yotel/theme.less
+++ b/zest_station/css/themes/yotel/theme.less
@@ -542,3 +542,9 @@
 .jumper{
     background-color: @backgroundColor !important; 
 }
+.oos_reason{
+    color: @grey1;
+    position:absolute;
+    padding-left:15px;
+    padding-top:15px;
+}
