CICO-29257 Adding new pagination to report

--- a/rover/partials/reports/complimentaryRoomReport/rvComplimentaryRoomReportRow.html
+++ b/rover/partials/reports/complimentaryRoomReport/rvComplimentaryRoomReportRow.html
@@ -2,7 +2,7 @@
     <strong>{{transaction.name}}</strong>
 </td>
 <td class="room">
-    {{transaction.room}}
+    {{transaction.room_no}}
 </td>
 <td class="guests">
     {{transaction.guest_nos}}
@@ -27,5 +27,5 @@
     {{transaction.nights}}
 </td>
 <td class="comp-nights">
-    {{transaction.complimentary_nights }}
+    {{transaction.comlimentay_nights }}
 </td>
