CICO-37322: eslint fixes and code updates

--- a/rover/partials/reports/scheduleReport/rvScheduleReport.html
+++ b/rover/partials/reports/scheduleReport/rvScheduleReport.html
@@ -113,7 +113,7 @@
         class="column-actions"
     >
         <button class="button white blue-text next-view has-arrow"
-            ng-click="goToNext()">Next</button>
+            ng-click="goToNext()">Schedule Details</button>
     </div>
 </div>
 
@@ -224,7 +224,7 @@
         class="column-actions"
     >
         <button ng-click="goToNext()"
-            class="button white blue-text next-view has-arrow">Next</button>
+            class="button white blue-text next-view has-arrow">Distribution List</button>
     </div>
 </div>
 
