--- a/rover/partials/pay/rvPaymentModal.html
+++ b/rover/partials/pay/rvPaymentModal.html
@@ -7,7 +7,7 @@
            {{'PAY_BILL' | translate}}
             <div class="select">
                 <!-- number of options should match the number of bills created -->
-                <select name="post-charge-to-bill" ng-model="renderData.billNumberSelected" ng-change = "billNumberChanged()">
+                <select convert-to-number name="post-charge-to-bill" ng-model="renderData.billNumberSelected" ng-change = "billNumberChanged()">
                     <option ng-repeat="bills in billsArray" value="{{bills.bill_number}}" ng-selected="{{bills.bill_number == renderData.billNumberSelected}}">{{bills.bill_number}}</option>
                 </select>
             </div>
