CICO-33346 updated ui based on the comments from demo/retro

--- a/admin/css/styles_ng_admin.css.less
+++ b/admin/css/styles_ng_admin.css.less
@@ -317,11 +317,13 @@
 
 /* CICO-33619*/
 .addon-image-preview{
-  height: 100px !important;
+  height: auto !important;
+  width: auto !important;
   margin-top: 20px;
 }
 .addon-image-preview img{
-  height: 100px !important;
+  height: auto !important;
+  width: auto !important;
 }
 /* CICO-33619*/
 
