--- a/rover/partials/reports/shared/rvReportMainMenu.html
+++ b/rover/partials/reports/shared/rvReportMainMenu.html
@@ -14,7 +14,7 @@
       ng-click="reportMainMenuChange(reportViewActions.SHOW_EXPORT_REPORTS)"
       ng-show="shouldShowExportReport()">
         <i class="icon-report icon-schedule"></i>
-        <span class="title has-arrow next-view">Export Reports</span>
+        <span class="title has-arrow next-view">Scheduled Exports</span>
     </li>
     <!-- <li ng-class="{'active': selected}">
         <i class="icon-report icon-category"></i>
