--- a/rover/partials/accounts/accountsTab/rvAccountDemographics.html
+++ b/rover/partials/accounts/accountsTab/rvAccountDemographics.html
@@ -20,7 +20,7 @@
                 <!-- <strong ng-show="">*</strong> -->
             </label>
             <div class="select">
-                <select iscroll-stop-propagation name="market" id="market" 
+                <select convert-to-number iscroll-stop-propagation name="market" id="market"
                     ng-class="{'placeholder': !accountConfigData.summary.demographics.market_segment_id}" 
                     ng-model="accountConfigData.summary.demographics.market_segment_id">
                     <option value="" selected translate>MARKET_PLACEHOLDER</option>
@@ -40,7 +40,7 @@
                 <!-- <strong ng-show="">*</strong> -->
             </label>
             <div class="select">
-                <select iscroll-stop-propagation name="source" id="source" 
+                <select convert-to-number iscroll-stop-propagation name="source" id="source"
                     ng-class="{'placeholder': !accountConfigData.summary.demographics.source_id}" 
                     ng-model="accountConfigData.summary.demographics.source_id">
                     <option value="" selected translate>SOURCE_PLACEHOLDER</option>
@@ -60,7 +60,7 @@
                 <!-- <strong ng-show="">*</strong> -->
             </label>
             <div class="select">
-                <select iscroll-stop-propagation name="origin" id="origin" 
+                <select convert-to-number iscroll-stop-propagation name="origin" id="origin"
                     ng-class="{'placeholder': !accountConfigData.summary.demographics.booking_origin_id}" 
                     ng-model="accountConfigData.summary.demographics.booking_origin_id">
                     <option value="" selected translate>ORIGIN_BOOKING_PLACEHOLDER</option>
