--- a/rover/partials/dashboard/rvLeftNavbar.html
+++ b/rover/partials/dashboard/rvLeftNavbar.html
@@ -7,7 +7,7 @@
 		<h5 ng-click="toggleHotelList()">{{currentHotelData.name}}</h5>
 		<dl class="dropdown">
 			<dt>Change hotel:</dt>
-			<dd ng-repeat="hotel in hotelDetails.userHotelsData.hotel_list"><a ng-click="redirectToHotel(hotel.hotel_id)">{{ hotel.hotel_name}}</a></dd>
+			<dd ng-repeat="hotel in hotelDetails.userHotelsData.hotel_list"><a ng-click="redirectToHotel(hotel)">{{ hotel.hotel_name}}</a></dd>
 		</dl>
 	</div>
 
