--- a/rover/partials/reservationCard/rvReservationDetails.html
+++ b/rover/partials/reservationCard/rvReservationDetails.html
@@ -69,6 +69,11 @@
                 </span>
 
             </div>
+            <div class="button has-arrow next-view" ng-show="!reservationData.reservation_card.is_hourly_reservation && reservationData.reservation_card.room_id !='' " ng-click="showDiaryScreen()">
+                <span class="label">
+                Diary
+                </span>
+            </div>
             <!-- Show only a label for displaying nights -->
         </div>
 
