--- a/guestweb/common_css/layout.less
+++ b/guestweb/common_css/layout.less
@@ -492,3 +492,32 @@
         width:30%;
   }
 }
+
+
+
+/***  Addons ***/
+
+.content-image{
+    max-width:100%;
+}
+.addon-container{
+    background:#eee;
+    border:1px #e5e5e5 solid;
+    padding:10px;
+    min-height:120px;
+    margin-bottom:10px;
+    cursor:pointer;
+    .content-image,.content-desc{
+        float:left;
+    }
+    .content-desc{
+        margin-left:30px;
+        p{
+            text-align: left;
+        }
+        p:first-of-type {
+            font-size: 15px;
+            font-weight:500;
+        }
+    }
+}
