--- a/guestweb/common_templates/partials/MGM/gwOfferAddonOptions.html
+++ b/guestweb/common_templates/partials/MGM/gwOfferAddonOptions.html
@@ -22,7 +22,7 @@
             <p class="error-text">
                 Our apologies, something went wrong, please complete your check-in at our front desk. You can also call the hotel at <a href="tel: {{hotelPhone}}" class="phone-text">{{hotelPhone}}.</a>
             </p>
-            <a class="btn btn-template early-checkin-button margin-top-10 grey-btn" ng-click="goToNextPage()"> Skip</a>
+            <a class="btn btn-template margin-top-10 grey-btn" ng-click="goToNextPage()"> Skip</a>
         </div>
         <div class="col-md-2">
         </div>
@@ -34,8 +34,8 @@
             <p class="main-text no-case bold-text">{{selectedAddon.title}}</p>
             <img ng-src="{{selectedAddon.image}}" class="content-image  margin-top-20" alt="">
             <div ng-hide="showPurchaseStatus">
-                <p class="sub-main-text no-case thick-text margin-top-20">{{currencySymbol}}{{selectedAddon.price}} {{selectedAddon.type}}</p>
-                <p class="sub-main-text no-case italics-text margin-top-20">{{selectedAddon.description}}</p>
+                <p class="sub-main-text margin-top-20">{{currencySymbol}}{{selectedAddon.price}} {{selectedAddon.price_label}}{{selectedAddon.suffix}}</p>
+                <p class="sub-main-text margin-top-20">{{selectedAddon.description}}</p>
                 <br/>
                 <div ng-show="selectedAddon.type === 'per room' || selectedAddon.type === 'flat rate'">
                     <p class="sub-main-text"> Select Quantity</p>
@@ -65,15 +65,17 @@
         <!-- List view -->
         <div class="col-md-8 top-spacing sm-no-top-spacing section-container float-none" ng-show="mode === 'LIST_VIEW'">
             <p class="main-text no-case margin-top-20">Enhance your stay</p>
+            <p class="sub-main-text no-case margin-top-20">showing {{addonList.length}} of {{addonList.length}}</p>
             <div ng-repeat="addon in addonList" class="addon-container" ng-click="addonSelected(addon)" ng-class="{'selected':addon.is_selected || addon.quantity > 0}">
                 <div class="content-image">
                     <img ng-src="{{addon.image}}" alt="" width="150" height="100">
                 </div>
                 <div class="content-desc">
                     <p class="sub-text no-case margin-top-20">{{addon.title}}<span ng-show="(addon.type === 'per room' || addon.type === 'flat rate') && addon.quantity > 0">&nbsp;({{addon.quantity}})</span></p>
-                    <p class="sub-text no-case margin-top-20">{{currencySymbol}}{{addon.price}} {{addon.type}}</p>
+                    <p class="sub-text  margin-top-20">{{currencySymbol}}{{addon.price}} {{addon.price_label}}{{selectedAddon.suffix}}</p>
                 </div>
             </div>
+            <a class="btn btn-template margin-top-80" ng-click="noThanksClicked()">Continue</a>
             <div class="row no-thanks-wrap margin-top-20">
                 <p class="centeralign no-thanks">
                     <a ng-click="noThanksClicked()" class="sub-text no-case">No thanks</a>
