CICO-38430 style fix

--- a/guestweb/common_css/layout.less
+++ b/guestweb/common_css/layout.less
@@ -500,6 +500,12 @@
 .content-image{
     max-width:100%;
 }
+.addon-details{
+    .price-details{
+      font-size: 1.8em !important;
+      font-weight:500;
+    }
+}
 .addon-container{
     background:#eee;
     border:1px #A9A9A9 solid;
@@ -519,7 +525,7 @@
             text-align: left;
         }
         p:first-of-type {
-            font-size: 15px;
+            font-size: 1.5em;
             font-weight:500;
         }
     }
