--- a/guestweb/common_templates/partials/MGM/gwOfferAddonOptions.html
+++ b/guestweb/common_templates/partials/MGM/gwOfferAddonOptions.html
@@ -1,87 +1,87 @@
 <!-- navbar -->
 <div class="container-fluid padding-0">
-    <div class="row header-bar">
-        <img alt="" class="logo-image" src="{{hotelLogo}}" />
-    </div>
+   <div class="row header-bar">
+      <img alt="" class="logo-image" src="{{hotelLogo}}" />
+   </div>
 </div>
 <!-- main section starts here -->
 <div class="container">
-    <!-- request text -->
-    <div class="row" ng-show="isLoading && !netWorkError">
-        <div class="col-md-2"></div>
-        <div class="col-md-8 top-spacing">
-            <p class="request-text">Your request is being processed. This may take a few seconds..... please wait!</p>
-        </div>
-        <div class="col-md-2">
-        </div>
-    </div>
-    <!-- error message -->
-    <div class="row" ng-show="netWorkError">
-        <div class="col-md-2"></div>
-        <div class="col-md-8 top-spacing">
-            <p class="error-text">
-                Our apologies, something went wrong, please complete your check-in at our front desk. You can also call the hotel at <a href="tel: {{hotelPhone}}" class="phone-text">{{hotelPhone}}.</a>
-            </p>
-            <a class="btn btn-template margin-top-10 grey-btn" ng-click="goToNextPage()"> Skip</a>
-        </div>
-        <div class="col-md-2">
-        </div>
-    </div>
-    <!-- main content -->
-    <div class="row" ng-hide="isLoading || netWorkError">
-        <!-- detailed view -->
-        <div class="col-md-8 top-spacing sm-no-top-spacing section-container float-none" ng-show="mode === 'DETAILED_VIEW'">
-            <p class="main-text no-case bold-text">{{selectedAddon.title}}</p>
-            <img ng-src="{{selectedAddon.image}}" class="content-image  margin-top-20" alt="">
-            <div ng-hide="showPurchaseStatus">
-                <p class="sub-main-text margin-top-20">{{currencySymbol}}{{selectedAddon.price}} {{selectedAddon.price_label}}{{selectedAddon.suffix}}</p>
-                <p class="sub-main-text margin-top-20">{{selectedAddon.description}}</p>
-                <br/>
-                <div ng-show="selectedAddon.type === 'per room' || selectedAddon.type === 'flat rate'">
-                    <p class="sub-main-text"> Select Quantity</p>
-                    <div class="row">
-                        <div class="select-style addon-numbers">
-                            <select ng-model="selectedAddon.quantity">
-                                <option value="">select</option>
-                                <option value="{{i}}" ng-repeat="i in quantityList">{{i}}</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
-                <!-- submit -->
-                <a class="btn btn-template margin-top-80" ng-click="purchaseAddon()" ng-hide="selectedAddon.is_selected">Purchase</a>
-                <a class="btn btn-template margin-top-80" ng-click="purchaseAddon()" ng-show="selectedAddon.is_selected">Remove Addon</a>
-                <div class="row no-thanks-wrap margin-top-20">
-                    <p class="centeralign no-thanks">
-                        <a ng-click="noThanksClicked()" class="sub-text no-case">No thanks</a>
-                    </p>
-                </div>
+   <!-- request text -->
+   <div class="row" ng-show="isLoading && !netWorkError">
+      <div class="col-md-2"></div>
+      <div class="col-md-8 top-spacing">
+         <p class="request-text">Your request is being processed. This may take a few seconds..... please wait!</p>
+      </div>
+      <div class="col-md-2">
+      </div>
+   </div>
+   <!-- error message -->
+   <div class="row" ng-show="netWorkError">
+      <div class="col-md-2"></div>
+      <div class="col-md-8 top-spacing">
+         <p class="error-text">
+            Our apologies, something went wrong, please complete your check-in at our front desk. You can also call the hotel at <a href="tel: {{hotelPhone}}" class="phone-text">{{hotelPhone}}.</a>
+         </p>
+         <a class="btn btn-template margin-top-10 grey-btn" ng-click="goToNextPage()"> Skip</a>
+      </div>
+      <div class="col-md-2">
+      </div>
+   </div>
+   <!-- main content -->
+   <div class="row" ng-hide="isLoading || netWorkError">
+      <!-- detailed view -->
+      <div class="col-md-8 top-spacing sm-no-top-spacing section-container float-none" ng-show="mode === 'DETAILED_VIEW'">
+         <p class="main-text no-case bold-text">{{selectedAddon.title}}</p>
+         <img ng-src="{{selectedAddon.image}}" class="content-image  margin-top-20" alt="">
+         <div ng-hide="showPurchaseStatus" class="addon-details">
+            <p class="sub-main-text margin-top-20 no-case price-details">{{currencySymbol}}{{selectedAddon.price}} {{selectedAddon.price_label}}{{selectedAddon.suffix}}</p>
+            <p class="sub-main-text margin-top-20" ng-bind-html="selectedAddonDescrition"></p>
+            <br/>
+            <div ng-show="selectedAddon.type === 'per room' || selectedAddon.type === 'flat rate'">
+               <p class="sub-main-text"> Select Quantity</p>
+               <div class="row">
+                  <div class="select-style addon-numbers">
+                     <select ng-model="selectedAddon.quantity">
+                        <option value="">select</option>
+                        <option value="{{i}}" ng-repeat="i in quantityList">{{i}}</option>
+                     </select>
+                  </div>
+               </div>
             </div>
-            <div ng-show="showPurchaseStatus" class="margin-bottom-10">
-                <p class="sub-main-text no-case margin-top-20">{{purchaseStatusText}}</p>
-                <a class="btn btn-template margin-top-80 margin-bottom-10" ng-click="doneClicked()">Done</a>
-            </div>
-        </div>
-        <!-- List view -->
-        <div class="col-md-8 top-spacing sm-no-top-spacing section-container float-none" ng-show="mode === 'LIST_VIEW'">
-            <p class="main-text no-case margin-top-20">Enhance your stay</p>
-            <p class="sub-main-text no-case margin-top-20">showing {{addonList.length}} of {{addonList.length}}</p>
-            <div ng-repeat="addon in addonList" class="addon-container" ng-click="addonSelected(addon)" ng-class="{'selected':addon.is_selected || addon.quantity > 0}">
-                <div class="content-image">
-                    <img ng-src="{{addon.image}}" alt="" width="150" height="100">
-                </div>
-                <div class="content-desc">
-                    <p class="sub-text no-case margin-top-20">{{addon.title}}<span ng-show="(addon.type === 'per room' || addon.type === 'flat rate') && addon.quantity > 0">&nbsp;({{addon.quantity}})</span></p>
-                    <p class="sub-text  margin-top-20">{{currencySymbol}}{{addon.price}} {{addon.price_label}}{{selectedAddon.suffix}}</p>
-                </div>
-            </div>
-            <a class="btn btn-template margin-top-80" ng-click="noThanksClicked()">Continue</a>
+            <!-- submit -->
+            <a class="btn btn-template margin-top-80" ng-click="purchaseAddon()" ng-hide="selectedAddon.is_selected">Purchase</a>
+            <a class="btn btn-template margin-top-80" ng-click="purchaseAddon()" ng-show="selectedAddon.is_selected">Remove Addon</a>
             <div class="row no-thanks-wrap margin-top-20">
-                <p class="centeralign no-thanks">
-                    <a ng-click="noThanksClicked()" class="sub-text no-case">No thanks</a>
-                </p>
+               <p class="centeralign no-thanks">
+                  <a ng-click="noThanksClicked()" class="sub-text no-case">No thanks</a>
+               </p>
             </div>
-        </div>
-    </div>
+         </div>
+         <div ng-show="showPurchaseStatus" class="margin-bottom-10">
+            <p class="sub-main-text no-case margin-top-20">{{purchaseStatusText}}</p>
+            <a class="btn btn-template margin-top-80 margin-bottom-10" ng-click="doneClicked()">Done</a>
+         </div>
+      </div>
+      <!-- List view -->
+      <div class="col-md-8 top-spacing sm-no-top-spacing section-container float-none" ng-show="mode === 'LIST_VIEW'">
+         <p class="main-text no-case margin-top-20">Enhance your stay</p>
+         <p class="sub-main-text no-case margin-top-20">showing {{addonList.length}} of {{addonList.length}}</p>
+         <div ng-repeat="addon in addonList" class="addon-container" ng-click="addonSelected(addon)" ng-class="{'selected':addon.is_selected || addon.quantity > 0}">
+            <div class="content-image">
+               <img ng-src="{{addon.image}}" alt="" width="150" height="100">
+            </div>
+            <div class="content-desc">
+               <p class="sub-text no-case margin-top-20">{{addon.title}}<span ng-show="(addon.type === 'per room' || addon.type === 'flat rate') && addon.quantity > 0">&nbsp;({{addon.quantity}})</span></p>
+               <p class="sub-text  no-case margin-top-20">{{currencySymbol}}{{addon.price}} {{addon.price_label}}{{addon.suffix}}</p>
+            </div>
+         </div>
+         <a class="btn btn-template margin-top-80" ng-click="noThanksClicked()">Continue</a>
+         <div class="row no-thanks-wrap margin-top-20">
+            <p class="centeralign no-thanks">
+               <a ng-click="noThanksClicked()" class="sub-text no-case">No thanks</a>
+            </p>
+         </div>
+      </div>
+   </div>
 </div>
 </div>
