--- a/admin/partials/dashboard/adLeftNavbar.html
+++ b/admin/partials/dashboard/adLeftNavbar.html
@@ -17,7 +17,7 @@
 						<a ng-click="settingsClicked()" class="icon-menu icon-settings active">Settings</a>
 					</li> 
 					<li id="sign-out">
-						<a href="/logout" ng-click="toggleDrawerMenu()" class="icon-menu icon-sign-out">Sign Out</a>
+						<a ng-click="logout()" class="icon-menu icon-sign-out">Sign Out</a>
 					</li>
 				</ul>
 
@@ -26,7 +26,7 @@
 						<a href="{{mobileMenuItem.action}}" class="icon-menu {{mobileMenuItem.iconClass}}" ng-class="{'open':menuOpen && showSubMenu && mobileMenuItem.submenu.length >= 1 && activeSubMenu == mobileMenuItem.submenu}" translate="{{mobileMenuItem.title}}"></a>
 					</li>
 					<li id="sign-out">
-						<a href="/logout" ng-click="toggleDrawerMenu()" class="icon-menu icon-sign-out">Sign Out</a>
+						<a ng-click="logout()" class="icon-menu icon-sign-out">Sign Out</a>
 					</li>
 				</ul>
 			</div>
