CICO-37984 fixes settings header title

--- a/admin/partials/zestStation/adZestStationMobilePhoneKeyEmailSetup.html
+++ b/admin/partials/zestStation/adZestStationMobilePhoneKeyEmailSetup.html
@@ -1,7 +1,6 @@
-<ad-common-parts-in-form-dir on-save-button-click="saveZestMobileAppMarketingDetails" header-caption="Setup Room Ready Email">
+<ad-common-parts-in-form-dir on-save-button-click="saveZestMobileAppMarketingDetails" header-caption="STATION_MOBILE_PHONE_KEY_EMAIL_HEADER">
     <fieldset class="holder left">
-        <ad-form-sub-title title="STATION_MOBILE_PHONE_KEY_EMAIL_HEADER"></ad-form-sub-title>
-        
+        <ad-form-sub-title title="STATION_MOBILE_PHONE_KEY_EMAIL_SETUP"></ad-form-sub-title>
 
         <ad-textbox value="data.room_ready_email_subject" name="app-name" id="app-name" label="SUBJECT" styleclass="full-width"></ad-textbox>
         
