--- a/guestweb/common_css/layout.less
+++ b/guestweb/common_css/layout.less
@@ -510,22 +510,32 @@
     background:#eee;
     border:1px #A9A9A9 solid;
     padding:10px;
-    min-height:108px;
+    min-height:118px;
     margin-bottom:10px;
     cursor:pointer;
     .content-image{
-      border:1px #A9A9A9 solid;
+      width:40%;
+      position:relative;
+      img{
+        position:absolute;
+        top:50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        border:1px #A9A9A9 solid;
+      }
+      min-height:98px;
     }
     .content-image,.content-desc{
         float:left;
     }
     .content-desc{
+     width:55%;
         margin-left:10px;
         p{
             text-align: left;
         }
         p:first-of-type {
-            font-size: 1.2em;
+            font-size: 1.5em !important;
             font-weight:500;
         }
     }
