--- a/guestweb/common_templates/partials/MGM/gwOfferAddonOptions.html
+++ b/guestweb/common_templates/partials/MGM/gwOfferAddonOptions.html
@@ -31,10 +31,10 @@
    <div class="row" ng-hide="isLoading || netWorkError">
       <!-- detailed view -->
       <div class="col-md-8 top-spacing sm-no-top-spacing section-container float-none" ng-show="mode === 'DETAILED_VIEW'">
-         <p class="main-text no-case bold-text">{{selectedAddon.title}}</p>
+         <p class="main-text no-text-case bold-text">{{selectedAddon.title}}</p>
          <img ng-src="{{selectedAddon.image}}" class="content-image  margin-top-20" alt="">
          <div ng-hide="showPurchaseStatus" class="addon-details">
-            <p class="sub-main-text margin-top-20 no-case price-details">{{currencySymbol}}{{selectedAddon.price}} {{selectedAddon.price_label}}{{selectedAddon.suffix}}</p>
+            <p class="sub-main-text margin-top-20 no-text-case price-details">{{currencySymbol}}{{selectedAddon.price}} {{selectedAddon.price_label}}{{selectedAddon.suffix}}</p>
             <p class="sub-main-text margin-top-20" ng-bind-html="selectedAddonDescrition"></p>
             <br/>
             <div ng-show="selectedAddon.type === 'per room' || selectedAddon.type === 'flat rate'">
@@ -53,32 +53,32 @@
             <a class="btn btn-template margin-top-80" ng-click="purchaseAddon()" ng-show="selectedAddon.is_selected">Remove Addon</a>
             <div class="row no-thanks-wrap margin-top-20">
                <p class="centeralign no-thanks">
-                  <a ng-click="noThanksClicked()" class="sub-text no-case">No thanks</a>
+                  <a ng-click="noThanksClicked()" class="sub-text no-text-case">No thanks</a>
                </p>
             </div>
          </div>
          <div ng-show="showPurchaseStatus" class="margin-bottom-10">
-            <p class="sub-main-text no-case margin-top-20">{{purchaseStatusText}}</p>
+            <p class="sub-main-text no-text-case margin-top-20">{{purchaseStatusText}}</p>
             <a class="btn btn-template margin-top-80 margin-bottom-10" ng-click="doneClicked()">Done</a>
          </div>
       </div>
       <!-- List view -->
       <div class="col-md-8 top-spacing sm-no-top-spacing section-container float-none" ng-show="mode === 'LIST_VIEW'">
-         <p class="main-text no-case margin-top-20">Enhance your stay</p>
-         <p class="sub-main-text no-case margin-top-20">showing {{addonList.length}} of {{addonList.length}}</p>
+         <p class="main-text no-text-case margin-top-20">Enhance your stay</p>
+         <p class="sub-main-text no-text-case margin-top-20">showing {{addonList.length}} of {{addonList.length}}</p>
          <div ng-repeat="addon in addonList" class="addon-container" ng-click="addonSelected(addon)" ng-class="{'selected':addon.is_selected || addon.quantity > 0}">
             <div class="content-image">
-               <img ng-src="{{addon.image}}" alt="" width="100%" height="80">
+               <img ng-src="{{addon.image}}" alt="" width="100%" height="auto">
             </div>
             <div class="content-desc">
-               <p class="sub-text no-case">{{addon.title | limitTo: 17 }}{{addon.title.length > 17? '...' : ''}}<span ng-show="(addon.type === 'per room' || addon.type === 'flat rate') && addon.quantity > 0">&nbsp;({{addon.quantity}})</span></p>
-               <p class="sub-text  no-case margin-top-20">{{currencySymbol}}{{addon.price}} {{addon.price_label}}{{addon.suffix}}</p>
+               <p class="sub-text no-text-case margin-top-10">{{addon.title | limitTo: 25 }}{{addon.title.length > 25? '...' : ''}}<span ng-show="(addon.type === 'per room' || addon.type === 'flat rate') && addon.quantity > 0">&nbsp;({{addon.quantity}})</span></p>
+               <p class="sub-text  no-text-case margin-top-20">{{currencySymbol}}{{addon.price}} {{addon.price_label}}{{addon.suffix}}</p>
             </div>
          </div>
          <a class="btn btn-template margin-top-80" ng-click="noThanksClicked()">Continue</a>
          <div class="row no-thanks-wrap margin-top-20">
             <p class="centeralign no-thanks">
-               <a ng-click="noThanksClicked()" class="sub-text no-case">No thanks</a>
+               <a ng-click="noThanksClicked()" class="sub-text no-text-case">No thanks</a>
             </p>
          </div>
       </div>
